--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        springBootVersion = '1.3.0.M5'
-    }
     repositories {
         jcenter()
         mavenCentral()
@@ -10,10 +7,10 @@ buildscript {
 		maven { url "https://repo.spring.io/plugins-release" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-        classpath "io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE"
+        classpath 'io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE'
     }
 }
 
@@ -22,7 +19,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'idea'
-// apply plugin: 'spring-boot' 
 apply plugin: "io.spring.dependency-management"
 apply plugin: 'com.github.ben-manes.versions'
 
@@ -35,13 +31,17 @@ group = 'org.springframework.composed'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-ext.springBootVersion      = '1.3.0.M5'
-ext.springVersion          = '4.2.1.RELEASE'
-
 repositories {
+    jcenter()
     mavenCentral()
     maven { url "http://repo.spring.io/snapshot" }
     maven { url "http://repo.spring.io/milestone" }
+}
+
+dependencyManagement {
+    imports {
+      mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+    }
 }
 
 dependencies {
@@ -54,17 +54,6 @@ eclipse {
          containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
          containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
     }
-}
-
-configurations.all {
-	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-		if (details.requested.group == "org.springframework.boot") {
-			details.useVersion springBootVersion
-		}
-		if (details.requested.group == "org.springframework") {
-			details.useVersion springVersion
-		}
-	}
 }
 
 task wrapper(type: Wrapper) {
